k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: masterannonce
spec:
  replicas: 2
  selector:
    matchLabels:
      app: masterannonce
  template:
    metadata:
      labels:
        app: masterannonce
    spec:
      containers:
        - name: masterannonce
          image: masterannonce:1.0
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 45
            periodSeconds: 15
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
