k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: masterannonce-service
spec:
  selector:
    app: masterannonce
  ports:
    - port: 80
      targetPort: 8080
  type: NodePort
