k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: masterannonce-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: masterannonce.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: masterannonce-service
                port:
                  number: 80
